@@ -23,8 +23,6 @@ DIST VMware-server-e.x.p-63231.i386.tar.gz 369654030 RMD160 7a702a1b5c4838696abc
 DIST VMware-server-e.x.p-63231.x86_64.tar.gz 340199772 RMD160 a6cfb9776300b4ab09c5bf17bc3ce6769df0a1b0 SHA1 bfd566a06b5269266bbf92a7293b77a438a35d1d SHA256 0a7197044f40985c75cd3dd912a87e150daef10fb187d75a1026a8aa5f9ceed9
 DIST VMware-workstation-e.x.p-91182.i386.tar.gz 346214069 RMD160 abba9a0e93556b641f2484b00cf992e55f12a70f SHA1 4b468cf6873f0096a44bc6fdbeb11d05e737c758 SHA256 566ca3b933467819da1f16c3788ceabc583b04fc02fc4bb83f7bb019e5448d9c
 DIST VMware-workstation-e.x.p-91182.x86_64.tar.gz 317455357 RMD160 83dbc194ea5a3702857c16c310b58e0f2eeaad2b SHA1 84fd9f52909f681a0cd4b216b3a876dcc308e0ab SHA256 abe961fdcfef4748720f5d81982ef903dc3b0ef913e48c944af5b66fb0936e2d
-DIST VMware-workstation-e.x.p-99530.i386.tar.gz 333484911 RMD160 06461d5ee9916f26a5d33c389cd9083afca132b3 SHA1 34f269caf243fa2fd5dacd21bb1f7d637890cba1 SHA256 044f35688f4f39734ee7b6f9f00e1e22670b2c7b77ec3bda0c9272a812ab7102
-DIST VMware-workstation-e.x.p-99530.x86_64.tar.gz 351779246 RMD160 c84a3b3e6601d3e4cea2dfab0fac105e6deed601 SHA1 cd9e814a3927b4a0c6004acf5e18fe9f601e5bce SHA256 2757dc733fff52df5ae9e64e64ac6d419908fdf2d4c0ab55b017bd8c899e38a3
 DIST vmware-any-any-update115.tar.gz 493641 RMD160 56cabe56f70c01a22a7671e861cc5a2df19855c7 SHA1 ff9b6fdf6ca74495eb5f4822a1854fc91185377c SHA256 b1c14fa9514663b85c2efe8331407e71cce96e5a21a8b941fa570c960bbdcaa1
 EBUILD vmware-modules-1.0.0.11-r1.ebuild 310 RMD160 7748b52659054c3b5b29181cbb35083eee30158a SHA1 7f20b5bb8808761897ccc8c395f6ee3e9d10065e SHA256 e897d58dd5b68ede4c58f02d2702dcdd0b85b16726bd8b4ec04e28a73ada8b7f
 EBUILD vmware-modules-1.0.0.13-r1.ebuild 309 RMD160 5e9267a28aaa0c36a61afc38110dd8f29f5f0df2 SHA1 7145a3756274c6617de84c058d79ebe77b2a637c SHA256 4a394b382a44026957253b802c2be37ccfd980048b7e68e344859861ad292d5f
@@ -34,6 +32,5 @@ EBUILD vmware-modules-1.0.0.17-r1.ebuild 459 RMD160 2ef0f8d190cec299cccf440e7cc5
 EBUILD vmware-modules-1.0.0.18.ebuild 621 RMD160 cded1e0eb365ce53e41054320850293f2f4d2d0d SHA1 f38941824506ee4024940a01394d6da9a108e28b SHA256 f89c7d3eae7ce74743094b75883faad058946d54ba861f3fe39c5b363c271309
 EBUILD vmware-modules-1.0.0.19.ebuild 793 RMD160 3f07a0dbaa31d7a8f7986d6f42cd4f980b9465e4 SHA1 45521730825d4250675a5493720be6c8ec7861c7 SHA256 decdd9597121c48bd318fab7ddbd74aaa7a2381c5f5383c3d3940648c58fdd64
 EBUILD vmware-modules-1.0.0.20.ebuild 1339 RMD160 7a141661463bffe8b5f4ed91283c03c40603e7a7 SHA1 ed5dd553b59486cbac1ebdf435655c1758550399 SHA256 f35afa34477afbce0c8bccb9d22b1359d4a54dd762866e32cb7b823487a9a066
-EBUILD vmware-modules-1.0.0.21.ebuild 793 RMD160 024536d2da0925217b8d61e64fbb2ff4d7e3f75b SHA1 f493d54e81db0f236d04968bb839405300567572 SHA256 b4e7f8c9fd707b0263eb9d8617afc375590ef3241b0d25e3877692a3a066578d
 EBUILD vmware-modules-1.0.0.22.ebuild 1349 RMD160 83af066da080c92b7baab2022c5757a074db6ba8 SHA1 f8a472a889634f1e350c91203d57eb81b958eb62 SHA256 1dbee31c322fcd203fcc40b864df35ec6e29d13a3ffbccdc490f45badf4f4133
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
